Changed Django URL

--- a/v1.3/index.html
+++ b/v1.3/index.html
@@ -9,5 +9,5 @@
 <style>body{margin:0;padding:0;background-color:#f1f1f1;font-family:system-ui;background:radial-gradient(circle at 5%,orange,#95baff 25%,#d6d6d6 35% 60%,#fff 100% 150%);background-size:300%;background-position:bottom left;animation:moveGradient 5s ease-in-out 1 both}@keyframes moveGradient{0%{background-position:bottom left}to{background-position:top right}}</style><link rel="stylesheet" href="./styles-N6GSN4II.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="./styles-N6GSN4II.css"></noscript></head>
 <body>
   <app-root></app-root>
-<link rel="modulepreload" href="./chunk-6BNZU6IS.js"><script src="./polyfills-FFHMD2TL.js" type="module"></script><script src="./main-QBWF7Z3K.js" type="module"></script></body>
+<link rel="modulepreload" href="./chunk-6BNZU6IS.js"><script src="./polyfills-FFHMD2TL.js" type="module"></script><script src="./main-E4SLMUQE.js" type="module"></script></body>
 </html>
